[package]
name = "HFT-Rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
bytes = "1.5"
crossbeam = "0.8"
chrono = "0.4"